[package]
name = "orunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
confy = "0.5.1"
serde = "1.0.163"
serde_derive = "1.0.163"
shellwords = "1.1.0"

[profile.release]
strip = true